# GIF-Framework

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: quickstart.md  scoring_specification.md
gif/: __init__.py  cli.py  pipeline.py
gif/bio/: __init__.py  assembly.py  biocides.py  fetch.py  mlst.py  resistance.py  virulence.py
gif/db/reference_data/: cc_classification.json
gif/db/reference_data/amr/: amr_genes.fasta  qrdr_genes.fasta
gif/db/reference_data/operational/: IS1216_reference.fasta  LGI1_int_reference.fasta  agrB_reference.fasta  agrC_reference.fasta  agrD_reference.fasta  bapL_reference.fasta  cspB_reference.fasta  cspD_reference.fasta  cspL_reference.fasta  emrC_reference.fasta  emrE_reference.fasta  flaA_reference.fasta  lde_reference.fasta  mdrL_reference.fasta  motA_reference.fasta  motB_reference.fasta
gif/db/reference_data/persistence/: SSI2_lin0464_reference.fasta  SSI2_lin0465_reference.fasta  bcrABC_full.fasta  bcrA_reference.fasta  bcrB_reference.fasta  bcrC_reference.fasta  cadA_reference.fasta  cadC_reference.fasta  lmo0444_reference.fasta  lmo0445_reference.fasta  lmo0446_reference.fasta  lmo0447_reference.fasta  lmo0448_reference.fasta  qacEDelta1_reference.fasta  (+1 more)
gif/scoring/: __init__.py  c_score.py  integrator.py  p_score.py  r_score.py  v_score.py  weights.py
gif/utils/: __init__.py  validators.py  wsl.py
tests/: __init__.py  test_scoring.py
tests/test_data/: test_amphitroph_CC204.fasta  test_nosotroph_CC6.fasta  test_saprotroph_CC121.fasta
(+10 files in other folders)
